# nekopoi-rs

./: Cargo.toml  README.md
examples/: get_coming_soon.rs  get_comments.rs  get_detail.rs  get_recent.rs  get_series.rs  search.rs  search_by_genre.rs  search_by_index.rs
src/: lib.rs  methods.rs  models.rs  request.rs  utils.rs
